<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgPokemonLogo"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mathplay_logo" />

    <!-- Botón de retroceso -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBackClose"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:tint="@color/purple_500"
        app:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:fabSize="mini" />

    <!-- Encabezado -->
    <TextView
        android:id="@+id/tvLoginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_header"
        android:textSize="35sp"
        android:textColor="#6200EE"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imgPokemonLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campos de entrada -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginHeader">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_rounded_edit_text"
            android:hint="@string/user_email"
            android:paddingHorizontal="15dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/user_password"
            android:background="@drawable/background_rounded_edit_text"
            android:paddingHorizontal="15dp" />
    </LinearLayout>

    <!-- Botones -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/start_session"
            android:textColor="#FFFFFF"
            android:backgroundTint="#6200EE" />

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_with_google"
            android:textColor="#FFFFFF"
            android:backgroundTint="#6200EE" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>